# solid_pgo

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
core/include/solid_pgo/: PoseGraphManager.h  SOLiDManager.h  common.h
include/solid_pgo/: odom_noise.hpp  solid_module.hpp
launch/: solid_pgo.launch.py
ros1/: CMakeLists.txt  package.xml
ros1/config/: params.yaml
ros1/launch/: solid_pgo.launch
ros1/src/: solid_pgo_node.cpp
ros2/: CMakeLists.txt  package.xml
ros2/config/: params.yaml
ros2/launch/: solid_pgo.launch.py
ros2/src/: solid_pgo_node.cpp
src/: solid_pgo_node.cpp
