<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solid_pgo</name>
  <version>1.0.0</version>
  <description>
    SLAM backend: FAST_LIO + SOLiD loop detection + GTSAM pose graph optimization.
    ROS2 (humble) version.
  </description>

  <maintainer email="user@example.com">maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
